--- a/Home.html
+++ b/Home.html
@@ -43,11 +43,11 @@
                   </li>
 
                   <li class="nav-item">
-                    <a class="nav-link">Membership</a>
+                    <a class="nav-link" href="membership.html">Membership</a>
                   </li>
 
                   <li class="nav-item">
-                    <a class="nav-link" href="/community.html">About </a>
+                    <a class="nav-link" href="About.html">About </a>
                   </li>
                 </ul>
               </div>
@@ -347,6 +347,29 @@
           </div>
         </div>
         <div class="col-sm-12 col-md-12 colg-1"></div>
+      </div>
+
+      <div class="row mt-5">
+        <div class="col-sm-12 col-md-12 col-lg-1"></div>
+        <div class="col-sm-12 col-md-12 col-lg-10">
+      <p>Follow us on all social media platforms</p>
+
+          <div class="socials-icons d-flex">
+            <div>
+              <img src="/assets/bi_instagram.png" alt="" class="mr-2"/>
+            </div>
+            <div>
+              <img src="/assets/Group.png" alt="" class="mr-2" />
+            </div>
+            <div>
+              <img src="/assets/Group (1).png" alt=""  class="mr-2"/>
+            </div>
+            <div>
+              <img src="/assets/Group (2).png" alt="" class="mr-2" />
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-1"></div> 
       </div>
     </section>
 
