--- a/Home.html
+++ b/Home.html
@@ -36,10 +36,10 @@
               <div class="nav-top m-auto">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link">Home</a>
+                    <a class="nav-link" href="About.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link">New Updates</a>
+                    <a class="nav-link" href="Newupdates.html">New Updates</a>
                   </li>
 
                   <li class="nav-item">
