--- a/Home.html
+++ b/Home.html
@@ -36,7 +36,7 @@
               <div class="nav-top m-auto">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="About.html">Home</a>
+                    <a class="nav-link" href="Home.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="Newupdates.html">New Updates</a>
