--- a/membership.html
+++ b/membership.html
@@ -39,7 +39,7 @@
                     <a class="nav-link" href="Home.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link">New Updates</a>
+                    <a class="nav-link" href="Newupdates.html">New Updates</a>
                   </li>
 
                   <li class="nav-item">
